--- a/.env
+++ b/.env
@@ -5,7 +5,7 @@
 
 # reference these in your code with process.env.SECRET
 
-BOT_TOKEN=
+BOT_TOKEN=Nzg2NjMyNjc3ODQ3MzM0OTIy.X9JOxQ.bAjSeCv5QpveN5ArfQlGv4vzB7A
 
 
 # note: .env is a shell file so there can't be spaces around =
